force-app/main/default/objects/Custom_Order__c/Custom_Order__c.object-meta.xml
<CustomObject>
    <label>Custom Order</label>
    <nameField>
        <label>Custom Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>