force-app/main/default/objects/Custom_Order__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Orders</relationshipLabel>
    <relationshipName>Custom_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>