force-app/main/default/objects/Custom_Order__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Custom Orders</relationshipLabel>
    <relationshipName>Custom_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>