force-app/main/default/objects/Custom_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Basket__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>Basket__c.CustomOrderId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>