force-app/main/default/objects/Custom_Order__c/fields/Total_Amount_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_With_Discount__c</fullName>
    <formula>Total_Amount__c - Total_Amount__c  /100 *   Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount With Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>