force-app/main/default/objects/Custom_Order__c/fields/Type_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_payment__c</fullName>
    <label>Type of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cash</fullName>
            </value>
            <value>
                <fullName>by card</fullName>
            </value>
            <value>
                <fullName>by card online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>