force-app/main/default/objects/Custom_Order__c/recordTypes/Order_recors_type.recordType-meta.xml
<RecordType>
    <fullName>Order_recors_type</fullName>
    <active>true</active>
    <label>Order recors type</label>
</RecordType>